# VortexPos

./: README.md  requirements.txt  run-local.sh  sync-app.sh  test_smoke.py
.github/: workflobuild-android.yml
.github/workflows/: backup-diario.yml  build-android.yml
.github/workflows/.github/workflows/: build-windows.yml
app/: backup_api.py  db.py  main.py  panel.html
app/static/: vortexpos.html
apps/android/: package.json
apps/windows/src-tauri/capabilities/: default.json
apps/windows/src-tauri/src/: main.rs
vortexpos-cloud-para-github 2/: Dockerfile  INTEGRACION.md  render.yaml  test_smoke.py
vortexpos-cloud-para-github 2/app/: security.py
vortexpos-cloud-para-github 2/app/static/: manifest.webmanifest  sw.js
vortexpos-cloud-para-github 2/apps/: README.md
vortexpos-cloud-para-github 2/apps/android/: capacitor.config.json
vortexpos-cloud-para-github 2/apps/windows/: package.json
vortexpos-cloud-para-github 2/apps/windows/src-tauri/: Cargo.toml  tauri.conf.json
