[package]
name = "vortexpos"
version = "2.1.0"
description = "vortexPOS — sistema de comandas para hostelería"
authors = ["VORTEX S.L."]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
